# pfennig-cli

./: LICENSE  pfennig-cli.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  Types.hs
