name:                pfennig-cli
version:             0.1.0.0
synopsis:            Pfennig CLI client
description:         Please see README.md
homepage:            http://github.com/muhbaasu/pfennig-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Schuhmacher
maintainer:          github@muhbaasu.de
copyright:           2016 Samuel Schuhmacher
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-record-updates -fwarn-unused-do-bind
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.6.0
                     , cereal == 0.5.1.0
                     , hashable == 1.2.4.0
                     , mtl == 2.2.1
                     , optparse-applicative == 0.12.1.0
                     , pipes == 4.1.8
                     , pipes-bytestring == 2.1.1
                     , pipes-safe == 2.2.3
                     , time == 1.5.0.1
                     , text == 1.2.2.1
                     , transformers == 0.4.2.0
                     , unordered-containers == 0.2.5.1
  default-language:    Haskell2010

executable pfennig-cli-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , optparse-applicative == 0.12.1.0
                     , pfennig-cli
  default-language:    Haskell2010

test-suite pfennig-cli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pfennig-cli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/muhbaasu/pfennig-cli
